[package]
name = "dns-zones-builder-rust"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.8" }

log = { version = "0" }
env_logger = { version = "0" }

regex = { version = "1" }
lazy_static = { version = "1.4.0" }
